--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <h2 class="hero-item">Our Team</h2>
           <ul class="hero-images">
             <li class="hero-subtitle">
-              <img src="./images/mark.jpg" alt="images Mark" width="264" />
+              <img src="./images/img1.jpg" alt="images Mark" width="264" />
               <div class="hero-title">
                 <h3 class="hero-name">Mark Guerrero</h3>
                 <p class="hero-profession">Product Designer</p>
@@ -163,7 +163,7 @@
             </li>
 
             <li class="hero-subtitle">
-              <img src="./images/tom.jpg" alt="images Tom " width="264" />
+              <img src="./images/img2.jpg" alt="images Tom " width="264" />
               <div class="hero-title">
                 <h3 class="hero-name">Tom Ford</h3>
                 <p class="hero-profession">Frontend Developer</p>
@@ -201,7 +201,7 @@
             </li>
 
             <li class="hero-subtitle">
-              <img src="./images/camila.jpg" alt="images Camila" width="264" />
+              <img src="./images/img3.jpg" alt="images Camila" width="264" />
               <div class="hero-title">
                 <h3 class="hero-name">Camila Garcia</h3>
                 <p class="hero-profession">Marketing</p>
@@ -239,7 +239,7 @@
             </li>
 
             <li class="hero-subtitle">
-              <img src="./images/daniel.jpg" alt="images Daniel" width="264" />
+              <img src="./images/img4.jpg" alt="images Daniel" width="264" />
               <div class="hero-title">
                 <h3 class="hero-name">Daniel Wilson</h3>
                 <p class="hero-profession">UI Designer</p>
