--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   <li class="hero-title-networks-item">
                     <a class="hero-title-networks-link" href="" target="_blank">
                       <svg class="hero-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
@@ -178,7 +178,7 @@
                   <li class="hero-title-networks-item">
                     <a class="hero-title-networks-link" href="" target="_blank">
                       <svg class="hero-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
@@ -216,7 +216,7 @@
                   <li class="hero-title-networks-item">
                     <a class="hero-title-networks-link" href="" target="_blank">
                       <svg class="hero-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
@@ -254,7 +254,7 @@
                   <li class="hero-title-networks-item">
                     <a class="hero-title-networks-link" href="" target="_blank">
                       <svg class="hero-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
