--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twiter"></use>
                 </svg>
               </a>
             </li>
@@ -448,7 +448,7 @@
             <button type="submit" class="footer-form-btn">
               Subscribe
               <svg class="footer-form-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Frame-3"></use>
+                <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
           </form>
@@ -460,7 +460,7 @@
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -476,7 +476,7 @@
                 id="user-name"
               />
               <svg class="modal-icon" width="18" height="24" fill="#4D5AE5">
-                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
@@ -491,7 +491,7 @@
                 id="user-tel"
               />
               <svg class="modal-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                <use href="./images/icons.svg#icon-phone-black"></use>
               </svg>
             </div>
           </div>
@@ -506,7 +506,7 @@
                 id="user-email"
               />
               <svg class="modal-icon" width="18" height="24">
-                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                <use href="./images/icons.svg#icon-email-black"></use>
               </svg>
             </div>
           </div>
