--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <li class="feature-list-item">
               <div class="feature-icon-box">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antena"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="title-feature">Strategy</h3>
