--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <label for="user-privacy" class="checkbox-text"
               ><span class="check-text-box">
                 <svg class="check-text-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                  <use href="./images/icons.svg#icon-Vector"></use>
                 </svg> </span
               >I accept the terms and conditions of the &#160;
               <a href="" class="link-privacy-policy"> Privacy Policy</a></label
